crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@115.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_tsquery('synonym_tst', 'Index & indices');"
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..50
    FuncCall@7..50
      Ident@7..17 "to_tsquery"
      Ascii40@17..18 "("
      AConst@18..31
        Sconst@18..31 "'synonym_tst'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..50
        Sconst@33..50 "'Index & indices'"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

