crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@118.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_tsvector('thesaurus_tst', 'one postgres one two one two three one');"
---
SelectStmt@0..78
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..76
    FuncCall@7..76
      Ident@7..18 "to_tsvector"
      Ascii40@18..19 "("
      AConst@19..34
        Sconst@19..34 "'thesaurus_tst'"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      AConst@36..76
        Sconst@36..76 "'one postgres one two ..."
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

