crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@119.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_tsvector('thesaurus_tst', 'Supernovae star is very new star and usually called supernovae (abbreviation SN)');"
---
SelectStmt@0..120
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..118
    FuncCall@7..118
      Ident@7..18 "to_tsvector"
      Ascii40@18..19 "("
      AConst@19..34
        Sconst@19..34 "'thesaurus_tst'"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      AConst@36..118
        Sconst@36..118 "'Supernovae star is v ..."
  Ascii41@118..119 ")"
  Ascii59@119..120 ";"

