crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('ispell', 'ballyklubber');"
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..41
    FuncCall@7..41
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..25
        Sconst@17..25 "'ispell'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..41
        Sconst@27..41 "'ballyklubber'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

